--- a/Assignment3/Part 4/styles.css
+++ b/Assignment3/Part 4/styles.css
@@ -1,51 +1,82 @@
 body {
-    background-color: #fff;
-    color: #333;
-    margin: 0;
-    font: 1.2em / 1.2 Arial, Helvetica, sans-serif;
-  }
+  background-color: #fff;
+  color: #333;
+  margin: 0;
+  font: 1.2em / 1.2 Arial, Helvetica, sans-serif;
+}
 
-  img {
-      max-width: 100%;
-      display: block;
-  }
-  
-  .logo {
-    font-size: 200%;
-    padding: 50px 20px;
-    margin: 0 auto;
-    max-width: 980px;
-  }
-  
+img {
+  max-width: 100%;
+  display: block;
+}
+
+.logo {
+  font-size: 200%;
+  padding: 50px 20px;
+  margin: 0 auto;
+  max-width: 980px;
+}
+
+.content {
+  max-width: 980px;
+  margin: 0 auto;
+  padding: 0 20px;
+}
+
+nav {
+  background-color: #000;
+  padding: .5em;
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+}
+
+nav ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  display: flex;
+  justify-content: space-between;
+}
+
+nav a {
+  color: #fff;
+  text-decoration: none;
+  padding: .5em 1em;
+}
+
+.grid {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.main-article {
+  flex: 1 0 60%; /* 60% width, minimum size, can shrink */
+  margin-right: 20px; /* space between main article and sidebar */
+}
+
+.sidebar {
+  flex: 1 0 30%; /* 30% width, minimum size, can shrink */
+}
+
+.photos {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 1px; /* gap between images */
+}
+
+.feature {
+  float: left;
+  margin-right: 20px;
+}
+
+@media (max-width: 768px) {
   .grid {
-    margin: 0 auto;
-    padding: 0 20px;
-    max-width: 980px;
-  }
-  
-  nav {
-    background-color: #000;
-    padding: .5em;
-  }
-  
-  nav ul {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-  }
-  
-  nav a {
-    color: #fff;
-    text-decoration: none;
-    padding: .5em 1em;
-  }
-  
-  .photos {
-    list-style: none;
-    margin: 0;
-    padding: 0;
+      flex-direction: column;
   }
 
-  .feature {
-      width: 200px;
+  .main-article, .sidebar {
+      width: 100%; /* Full width on smaller screens */
+      margin-right: 0;
   }
+}
